--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2",
+    "django-redis>=5.4.0",
     "djangorestframework>=3.16.0",
     "pillow>=11.2.1",
     "psycopg>=3.2.7",
